# hatchet-playground

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
notebooks/: benchmark_external.ipynb  general.ipynb  task_status.ipynb
src/hatchet_playground/: hatchet_client.py  run_external.py  run_local.py  task_schemas.py  worker.py  worker_sync.py
src/hatchet_playground/workflows/: chat_otel.py  cpu_bound_process_pool.py  cpu_bound_sync_sleep.py  externally_triggered.py  first_wf.py  pydantic_wf.py  schemas.py
