[project]
name = "hatchet-playground"
version = "0.1.0"
description = "Simple Setup to Run Hatchet Workflows"
requires-python = ">=3.11,<3.14"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = ["hatchet-sdk>=1.24"]

[tool.ruff]
line-length = 88
respect-gitignore = true
src = ["src"]
target-version = "py313"

# extend-include = []

extend-exclude = ["docs", "tests"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]
# "*.ipynb" = ["E501"]  # disable line-too-long in notebooks

# [tool.ruff.flake8-quotes]
# inline-quotes = "single"
# multiline-quotes = "double"
# docstring-quotes = "double"

[tool.ruff.format]
skip-magic-trailing-comma = false
# indent-style = "space"
# preview = true

[tool.ruff.lint]
allowed-confusables = ["ı", "’"]
select = [
    "B",  # flake8-bugbear
    "C",  # flake8-comprehensions
    "C9", # mccabe
    # "D",  # flake8-docstrings
    "E",   # pycodestyle errors (default)
    "F",   # pyflakes (default)
    "I",   # isort
    "PD",  # pandas-vet
    "PIE", # pie
    "PL",  # pylint
    "PTH", # pathlib
    "Q",    # flake8-quotes
    "RET",  # return
    "RUF",  # Enable all ruff-specific checks
    "SIM",  # simplify
    "S307", # eval
    # "T20",  # (disallow print statements) keep debugging statements out of the codebase
    "W",     # pycodestyle warnings
    "ASYNC", # async
]

ignore = [
    "E501", # Line too long, handled by ruff formatter
    "D107", # "Missing docstring in __init__",
]

exclude = ["*.ipynb"]

# unfixable = [
#     "F401" # Unused imports.
# ]

#extend-select = []

# [tool.ruff.lint.flake8-import-conventions.extend-aliases]
# some_alias = ""

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
combine-as-imports = true
# force-wrap-aliases = true
# known-first-party = ["SomeLibrary"]
# known-third-party = ["SomeLibrary"]

[build-system]
requires = ["uv_build>=0.10,<0.14.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "pandas>=3.0.0",
    "plotly>=6.5.2",
    "ruff>=0.15.1",
]
